# aoc25

./: .gitignore  Cargo.toml  new_day
days/day01/: Cargo.toml
days/day01/benches/: bench.rs
days/day01/src/: lib.rs  main.rs
days/day02/: Cargo.toml
days/day02/benches/: bench.rs
days/day02/src/: lib.rs  main.rs
days/day03/: Cargo.toml
days/day03/benches/: bench.rs
days/day03/src/: lib.rs  main.rs
days/day04/: Cargo.toml
days/day04/benches/: bench.rs
days/day04/src/: lib.rs  main.rs
days/day05/: Cargo.toml
days/day05/benches/: bench.rs
days/day05/src/: lib.rs  main.rs
days/day06/: Cargo.toml
days/day06/benches/: bench.rs
days/day06/src/: lib.rs  main.rs
days/libaoc/: Cargo.toml
days/libaoc/src/: lib.rs
template/: Cargo.toml
template/benches/: bench.rs
template/src/: lib.rs  main.rs
