[workspace]
members = ["days/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Alex Buck"]
description = "Advent of Code 2025"
documentation = "https://github.com/alexjbuck/aoc25"
edition = "2024"

[workspace.dependencies]
libaoc = { path = "days/libaoc" }

[workspace.lints.clippy]
pedantic = "warn"

[profile.dev]
debug = 0
codegen-units = 8

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.binsize]
inherits = "release"
opt-level = "z"
debug = false
strip = true
lto = true
codegen-units = 1
incremental = false
panic = "abort"
