[package]
name = "day04"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
itertools = "0.14.0"
libaoc.workspace = true
criterion.workspace = true

[lints]
workspace = true

[[bench]]
name = "bench"
harness = false
