[package]
name = "day06"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
libaoc.workspace = true
criterion.workspace = true
indoc.workspace = true

[lints]
workspace = true

[[bench]]
name = "bench"
harness = false
